Fix spacing on login/signup views

--- a/app/assets/stylesheets/styles/devise.scss
+++ b/app/assets/stylesheets/styles/devise.scss
@@ -24,6 +24,7 @@
 
   .user-form-wrapper-inner {
     text-align: center;
+    padding: 0 1rem 0 1rem;
     
     h2 {
       margin-bottom: 0.5rem;
@@ -38,7 +39,7 @@
         margin-bottom: 1.5rem;
         
         input:not([type=checkbox]) {
-          width: 300px;
+          width: 100%;
           height: 45px;
           padding: 0 1rem;
           background: #fff;
